--- a/app-management/package.json
+++ b/app-management/package.json
@@ -7,7 +7,10 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",    
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "orm:migration:create": "npm run build && ts-node ./node_modules/typeorm/cli migration:create -o  ./migrations/migratoin",
+    "orm:migration:generate": "npm run build && ts-node ./node_modules/typeorm/cli migration:generate -o ./migrations/migratoin -d data-source.ts",
+    "orm:migration:run": "ts-node ./node_modules/typeorm/cli migration:run  -d data-source.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -40,6 +43,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "dotenv": "^16.3.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
