App-management auth service added

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -1,4 +1,13 @@
-DATABASE_PASSWORD=TEST
-DATABASE_PORT=1234
-DATABASE_ADDRESS=127.0.0.1
-DEFAULT_DATABASE_NAME=TEST
+DB_PASS=password
+DB_PORT=5432
+DB_HOST=127.0.0.1
+DB_USER=postgres
+DB_NAME=development
+
+# https://docs.aws.amazon.com/cognito/latest/developerguide/authorization-endpoint.html
+AWS_COGNITO_POOL_URL='https://<pool-name>.auth.<aws-region>.amazoncognito.com/oauth2'
+GRANT_TYPE='authorization_code'
+# Application client from cognito pool
+CLIENT_ID=''
+# redirect uri registered for the cognito pool client
+REDIRECT_URI='http://localhost:3000'
