--- a/.github/workflows/app-management.yml
+++ b/.github/workflows/app-management.yml
@@ -8,7 +8,7 @@ on:
     #   - 'app-management/**'
   pull_request:
     branches:
-      - main  
+      - main
 
 # Set default wokring directory to app-management
 defaults:
@@ -23,23 +23,22 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: "18"
       - uses: actions/cache@v3
         id: npm-cache
         with:
-          path: '**/node_modules'
+          path: "**/node_modules"
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-
 
       - run: npm ci
       - run: npm run lint
       - run: npm run test:cov
       - run: npm run build
   docker_build:
-    name: Github Container Registry build and push    
+    name: Github Container Registry build and push
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3   
+      - uses: actions/checkout@v3
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -52,10 +51,10 @@ jobs:
           push: true
           tags: ghcr.io/deployment-helper/app-management:lastest
   docker_build_aws:
-    name: AWS Container Registry build and push    
+    name: AWS Container Registry build and push
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3   
+      - uses: actions/checkout@v3
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -73,5 +72,4 @@ jobs:
           context: ./app-management
           file: ./app-management/Dockerfile
           push: true
-          tags: 168490963129.dkr.ecr.us-east-1.amazonaws.com/app-management:latest          
-
+          tags: 168490963129.dkr.ecr.us-east-1.amazonaws.com/app-management:latest
