--- a/app-management/example.env
+++ b/app-management/example.env
@@ -6,8 +6,12 @@ DB_NAME=development
 
 # https://docs.aws.amazon.com/cognito/latest/developerguide/authorization-endpoint.html
 AWS_COGNITO_POOL_URL='https://<pool-name>.auth.<aws-region>.amazoncognito.com/oauth2'
+AWS_COGNITO_JWKS_URL = 'https://cognito-idp.<aws-region>.amazonaws.com/<pool_id>/.well-known/jwks.json'
 GRANT_TYPE='authorization_code'
 # Application client from cognito pool
 CLIENT_ID=''
 # redirect uri registered for the cognito pool client
 REDIRECT_URI='http://localhost:3000'
+
+# Can be created in GCP API and Services section
+GCP_API_KEY= <>
