--- a/app-management/package.json
+++ b/app-management/package.json
@@ -30,7 +30,6 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.4.0",
     "google-auth-library": "^9.0.0",
     "googleapis": "^126.0.0",
@@ -38,8 +37,7 @@
     "jwks-rsa": "^3.0.1",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
