dynamo db connection ready

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -15,3 +15,7 @@ REDIRECT_URI='http://localhost:3000'
 
 # Can be created in GCP API and Services section
 GCP_API_KEY= <>
+
+# AWS kyes to access dynamodb
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
