--- a/.github/workflows/app-management.yml
+++ b/.github/workflows/app-management.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-
+      - run: cp example.env .env
       - run: npm ci
       - run: npm run lint
       - run: npm run test:cov
