--- a/app-management/package.json
+++ b/app-management/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.398.0",
+    "@aws-sdk/client-s3": "^3.400.0",
     "@aws-sdk/lib-dynamodb": "^3.398.0",
     "@googleapis/youtube": "^11.0.0",
     "@nestjs/axios": "^3.0.0",
