update audio generage status with api key

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -13,3 +13,6 @@ GCP_API_KEY= <>
 # AWS kyes to access dynamodb
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+## service key to access content from other own services
+SERVICE_KEY=''
