--- a/.github/workflows/app-management.yml
+++ b/.github/workflows/app-management.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches:
       - main
+env:
+  PROJECT_ID: chat-gpt-videos
+  IMAGE_NAME: server
 
 # Set default wokring directory to app-management
 defaults:
@@ -34,7 +37,7 @@ jobs:
       - run: npm run lint
       - run: npm run test:cov
       - run: npm run build
-  docker_build:
+  docker_build_gtihub:
     name: Github Container Registry build and push
     runs-on: ubuntu-latest
     steps:
@@ -50,26 +53,25 @@ jobs:
           file: ./app-management/Dockerfile
           push: true
           tags: ghcr.io/deployment-helper/app-management:lastest
-  docker_build_aws:
-    name: AWS Container Registry build and push
+  docker_build_gcp:
+    name: GCP Container Registry build and push
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
         with:
-          context: ./app-management
-          file: ./app-management/Dockerfile
-          push: true
-          tags: 168490963129.dkr.ecr.us-east-1.amazonaws.com/app-management:latest
+          project_id: ${{ env.PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Configure Docker
+        run: gcloud auth configure-docker
+
+      - name: Build Docker image
+        run: docker build -t asia-south1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}/server:${{ github.sha }} .
+
+      - name: Push Docker image to GCP
+        run: docker push asia-south1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}/server:${{ github.sha }}
