GCP docker image upload

--- a/.github/workflows/app-management.yml
+++ b/.github/workflows/app-management.yml
@@ -61,14 +61,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0.2.1
         with:
           project_id: ${{ env.PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
       - name: Configure Docker
-        run: gcloud auth configure-docker
+        run: gcloud --quiet auth configure-docker
 
       - name: Build Docker image
         run: docker build -t asia-south1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}/server:${{ github.sha }} .
