--- a/app-management/package.json
+++ b/app-management/package.json
@@ -7,20 +7,21 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "orm:migration:create": "npm run build && ts-node ./node_modules/typeorm/cli migration:create -o  ./migrations/migratoin",
     "orm:migration:generate": "npm run build && ts-node ./node_modules/typeorm/cli migration:generate -o ./migrations/migratoin -d data-source.ts",
     "orm:migration:run": "ts-node ./node_modules/typeorm/cli migration:run  -d data-source.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:bs:dev": "nest start batch-server --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/apps/app-management/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/app-management/test/jest-e2e.json"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.398.0",
@@ -70,14 +71,14 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^src/(.*)$": "<rootDir>/$1"
+      "^@apps/app-management/(.*)$": "<rootDir>/apps/app-management/src/$1"
     },
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -85,7 +86,10 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/apps/"
+    ]
   }
 }
