--- a/app-management/package.json
+++ b/app-management/package.json
@@ -30,12 +30,14 @@
     "@aws-sdk/lib-dynamodb": "^3.398.0",
     "@googleapis/youtube": "^11.0.0",
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.4.0",
+    "bull": "^4.11.3",
     "google-auth-library": "^9.0.0",
     "googleapis": "^126.0.0",
     "jsonwebtoken": "^9.0.1",
