--- a/app-management/package.json
+++ b/app-management/package.json
@@ -43,6 +43,8 @@
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
     "pg": "^8.11.2",
+    "puppeteer": "^21.3.6",
+    "puppeteer-screen-recorder": "^2.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
