Process and upload Video to S3

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -16,3 +16,6 @@ AWS_SECRET_ACCESS_KEY=
 
 ## service key to access content from other own services
 SERVICE_KEY=''
+
+#Location to store temp/processed content
+STORAGE_DIR=/Users/vinaymavi/quiz-project-content/
