--- a/app-management/tsconfig.json
+++ b/app-management/tsconfig.json
@@ -18,8 +18,14 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@apps/app-management/*":[
+      "@apps/app-management/*": [
         "apps/app-management/src/*"
+      ],
+      "@app/shared": [
+        "libs/shared/src"
+      ],
+      "@app/shared/*": [
+        "libs/shared/src/*"
       ]
     }
   }
