Redis host configuration added.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -19,3 +19,8 @@ SERVICE_KEY=''
 
 #Location to store temp/processed content
 STORAGE_DIR=/Users/vinaymavi/quiz-project-content/
+
+# Redis details
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASS=
