--- a/app-management/package.json
+++ b/app-management/package.json
@@ -16,6 +16,7 @@
     "start:bs:dev": "nest start batch-server --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/app-management/main",
+    "start:bs:prod": "node dist/apps/batch-server/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
