--- a/app-management/Dockerfile.batch-service
+++ b/app-management/Dockerfile.batch-service
@@ -3,12 +3,13 @@ FROM node:18 AS base
 WORKDIR /app
 
 COPY apps ./apps
+COPY libs ./libs
 COPY nest-cli.json ./
 COPY package*.json ./
 COPY tsconfig*.json ./
 
 RUN npm install
-RUN npm run build
+RUN npm run build:bs
 
 
 # ---- Release ----
