--- a/app-management/package.json
+++ b/app-management/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "build:bs": "nest build batch-server",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "orm:migration:create": "npm run build && ts-node ./node_modules/typeorm/cli migration:create -o  ./migrations/migratoin",
     "orm:migration:generate": "npm run build && ts-node ./node_modules/typeorm/cli migration:generate -o ./migrations/migratoin -d data-source.ts",
