--- a/app-management/package.json
+++ b/app-management/package.json
@@ -40,6 +40,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.4.0",
     "bull": "^4.11.3",
+    "fluent-ffmpeg": "^2.1.2",
     "google-auth-library": "^9.0.0",
     "googleapis": "^126.0.0",
     "jsonwebtoken": "^9.0.1",
@@ -56,6 +57,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/fluent-ffmpeg": "^2.1.22",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
@@ -77,7 +79,8 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^@apps/app-management/(.*)$": "<rootDir>/apps/app-management/src/$1"
+      "^@apps/app-management/(.*)$": "<rootDir>/apps/app-management/src/$1",
+      "^@app/shared/(.*)$": "<rootDir>/libs/shared/src/$1"
     },
     "moduleFileExtensions": [
       "js",
@@ -95,7 +98,8 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/"
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
     ]
   }
 }
