--- a/app-management/package.json
+++ b/app-management/package.json
@@ -23,7 +23,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/app-management/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/app-management/test/jest-e2e.json",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.398.0",
