--- a/.github/workflows/app-management.yml
+++ b/.github/workflows/app-management.yml
@@ -40,7 +40,7 @@ jobs:
       - run: npm run test:cov
       - run: npm run build
   docker_build_gtihub:
-    name: Github Container Registry build and push
+    name: Server docker build and push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -56,7 +56,7 @@ jobs:
           push: true
           tags: ghcr.io/deployment-helper/app-management:lastest
   docker_build_gtihub_batch_server:
-    name: Github Container Registry build and push
+    name: Batch Server docker build and push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
