--- a/app-management/Dockerfile.batch-service
+++ b/app-management/Dockerfile.batch-service
@@ -1,3 +1,4 @@
+# ---- Base ----
 FROM node:18 AS base
 
 WORKDIR /app
@@ -11,33 +12,63 @@ COPY tsconfig*.json ./
 RUN npm install
 RUN npm run build:bs
 
-
 # ---- Release ----
-FROM node:18-alpine AS release
+FROM node:18-buster-slim AS release
 
-# Install ffmpeg
-RUN apk add --no-cache ffmpeg
-
-# Install Chromium and its dependencies
-RUN apk add --no-cache \
-    nss \
-    freetype \
-    harfbuzz \
+# Install ffmpeg and necessary dependencies for Chromium
+RUN apt-get update && apt-get install -y \
+    ffmpeg \
     ca-certificates \
-    ttf-freefont \
-    chromium \
-    chromium-chromedriver
+    fonts-liberation \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libc6 \
+    libcairo2 \
+    libcups2 \
+    libdbus-1-3 \
+    libexpat1 \
+    libfontconfig1 \
+    libgbm1 \
+    libgcc1 \
+    libglib2.0-0 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libstdc++6 \
+    libx11-6 \
+    libx11-xcb1 \
+    libxcb1 \
+    libxcomposite1 \
+    libxcursor1 \
+    libxdamage1 \
+    libxext6 \
+    libxfixes3 \
+    libxi6 \
+    libxrandr2 \
+    libxrender1 \
+    libxss1 \
+    libxtst6 \
+    lsb-release \
+    wget \
+    xdg-utils \
+    --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
 
-# Create app directory
+
+# Set working directory
 WORKDIR /app
+
 # Install production dependencies
-COPY --from=BASE /app/package*.json ./
+COPY --from=base /app/package*.json ./
 RUN npm install --only=production
+
 # Copy built app files
 COPY --from=base /app/dist ./dist
 
 # Expose port and define CMD
-
 ARG PORT=3000
 ENV PORT=${PORT}
 
