--- a/app-management/package.json
+++ b/app-management/package.json
@@ -31,6 +31,7 @@
     "@aws-sdk/client-s3": "^3.400.0",
     "@aws-sdk/client-sns": "^3.413.0",
     "@aws-sdk/lib-dynamodb": "^3.398.0",
+    "@aws-sdk/s3-request-presigner": "^3.465.0",
     "@googleapis/youtube": "^11.0.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/bull": "^10.0.1",
