Enable local development with deployed environment with a query string flag.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -6,7 +6,8 @@ GRANT_TYPE='authorization_code'
 CLIENT_ID=''
 # redirect uri registered for the cognito pool client
 REDIRECT_URI='http://localhost:3000'
-
+# Env to develop application with deployed api
+LOCAL_REDIRECT_API=http://localhost:3000/auth/apis
 # Can be created in GCP API and Services section
 GCP_API_KEY= <>
 
