Video API ready with GCP Firestore.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -10,6 +10,10 @@ REDIRECT_URI='http://localhost:3000'
 # Can be created in GCP API and Services section
 GCP_API_KEY= <>
 
+
+# GCP Service account key file path
+GOOGLE_APPLICATION_CREDENTIALS=
+
 # AWS kyes to access dynamodb
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
