--- a/app-management/package.json
+++ b/app-management/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/client-sns": "^3.413.0",
     "@aws-sdk/lib-dynamodb": "^3.398.0",
     "@aws-sdk/s3-request-presigner": "^3.465.0",
+    "@google-cloud/firestore": "^7.3.1",
     "@googleapis/youtube": "^11.0.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/bull": "^10.0.1",
