--- a/.github/workflows/app-management.yml
+++ b/.github/workflows/app-management.yml
@@ -16,7 +16,7 @@ env:
   IMAGE_NAME: nest-server
   BS_IMAGE_NAME: batch-nest-server
 
-# Set default wokring directory to app-management
+# Set default working directory to app-management
 defaults:
   run:
     working-directory: ./app-management
@@ -40,8 +40,8 @@ jobs:
       - run: npm run lint
       - run: npm run test:cov
       - run: npm run build
-  docker_build_gtihub:
-    name: Server docker build and push
+  github_pkg:
+    name: Github build and push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -49,6 +49,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
+#          GitHub Personal Access Token
           password: ${{ secrets.ACCESS_TOKEN }}
       - uses: docker/build-push-action@v4
         with:
@@ -56,8 +57,8 @@ jobs:
           file: ./app-management/Dockerfile
           push: true
           tags: ghcr.io/deployment-helper/app-management:lastest
-  docker_build_gtihub_batch_server:
-    name: Batch Server docker build and push
+  github_pkg_batch_server:
+    name: Github batch server build and push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -65,6 +66,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
+#          GitHub personal access token
           password: ${{ secrets.ACCESS_TOKEN }}
       - uses: docker/build-push-action@v4
         with:
@@ -72,7 +74,7 @@ jobs:
           file: ./app-management/Dockerfile.batch-service
           push: true
           tags: ghcr.io/deployment-helper/app-management-batch-server:lastest
-  docker_build_gcp:
+  gcp_server:
     name: GCP Server build and push
     runs-on: ubuntu-latest
     steps:
@@ -95,8 +97,8 @@ jobs:
       - name: Push Docker image to Artifact Registry
         run: docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
-  docker_build_bs_gcp:
-    name: GCP Server build and push
+  gcp_bath_server:
+    name: GCP batch server build and push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -113,6 +115,7 @@ jobs:
         run: gcloud --quiet auth configure-docker ${{ env.REGION }}-docker.pkg.dev
 
       - name: Build Docker image
+#        Build image from Dockerfile.batch-service
         run: docker build -f Dockerfile.batch-service -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.BS_IMAGE_NAME }}:${{ github.sha }} .
 
       - name: Push Docker image to Artifact Registry
