Read subtitle fonts for different languages.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -28,3 +28,9 @@ STORAGE_DIR=/Users/vinaymavi/quiz-project-content/
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASS=
+
+NODE_ENV='development'
+
+# Fonts file path for the video generation
+
+FONT_DIR=/Users/vinaymavi/github/deployment-helper/apis/app-management/fonts
