--- a/app-management/package.json
+++ b/app-management/package.json
@@ -55,6 +55,7 @@
     "puppeteer-screen-recorder": "^2.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
