Gemini service added.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -1,6 +1,6 @@
 # https://docs.aws.amazon.com/cognito/latest/developerguide/authorization-endpoint.html
 AWS_COGNITO_POOL_URL='https://<pool-name>.auth.<aws-region>.amazoncognito.com/oauth2'
-AWS_COGNITO_JWKS_URL = 'https://cognito-idp.<aws-region>.amazonaws.com/<pool_id>/.well-known/jwks.json'
+AWS_COGNITO_JWKS_URL='https://cognito-idp.<aws-region>.amazonaws.com/<pool_id>/.well-known/jwks.json'
 GRANT_TYPE='authorization_code'
 # Application client from cognito pool
 CLIENT_ID=''
@@ -8,9 +8,7 @@ CLIENT_ID=''
 REDIRECT_URI='http://localhost:3000'
 
 # Can be created in GCP API and Services section
-GCP_API_KEY= <>
-
-
+GCP_API_KEY=<>
 # GCP Service account key file path
 GOOGLE_APPLICATION_CREDENTIALS=
 
@@ -21,6 +19,11 @@ AWS_SECRET_ACCESS_KEY=
 ## service key to access content from other own services
 SERVICE_KEY=''
 
+# open api key
+OPENAI_API_KEY
+
+# Gemini API key
+GEMINI_API_KEY
 #Location to store temp/processed content
 STORAGE_DIR=/Users/vinaymavi/quiz-project-content/
 
