--- a/app-management/package.json
+++ b/app-management/package.json
@@ -35,6 +35,7 @@
     "@google-cloud/firestore": "^7.3.1",
     "@google-cloud/text-to-speech": "^5.1.0",
     "@google-cloud/translate": "^8.2.0",
+    "@google/generative-ai": "^0.12.0",
     "@googleapis/youtube": "^11.0.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/bull": "^10.0.1",
