example.env file updated.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -8,29 +8,29 @@ CLIENT_ID=''
 REDIRECT_URI='http://localhost:3000'
 
 # Can be created in GCP API and Services section
-GCP_API_KEY=<>
+GCP_API_KEY=''
 # GCP Service account key file path
-GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_APPLICATION_CREDENTIALS=''
 
 # AWS kyes to access dynamodb
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=''
+AWS_SECRET_ACCESS_KEY=''
 
 ## service key to access content from other own services
-SERVICE_KEY=''
+SERVICE_KEY='THISISLOCALDEVELOPMENTKEY'
 
 # open api key
-OPENAI_API_KEY
+OPENAI_API_KEY='add your openai api key here'
 
 # Gemini API key
-GEMINI_API_KEY
+GEMINI_API_KEY='add your gemini api key here'
 #Location to store temp/processed content
 STORAGE_DIR=/Users/vinaymavi/quiz-project-content/
 
 # Redis details
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASS=
+REDIS_HOST=''
+REDIS_PORT=''
+REDIS_PASS=''
 
 NODE_ENV='development'
 
