Toast moved to bottom start.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -23,6 +23,7 @@ SERVICE_KEY='THISISLOCALDEVELOPMENTKEY'
 OPENAI_API_KEY='add your openai api key here'
 
 # Gemini API key
+# https://console.cloud.google.com/apis/credentials -> Create credentials -> API key
 GEMINI_API_KEY='add your gemini api key here'
 #Location to store temp/processed content
 STORAGE_DIR=/Users/vinaymavi/quiz-project-content/
