wed-07-aug-24 YouTube workflow, scene generation from branch

--- a/app-management/package.json
+++ b/app-management/package.json
@@ -51,6 +51,7 @@
     "googleapis": "^126.0.0",
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
+    "nest-cli": "^0.0.5",
     "openai": "^4.47.2",
     "pg": "^8.11.2",
     "puppeteer": "^21.3.6",
