--- a/app-management/package.json
+++ b/app-management/package.json
@@ -15,7 +15,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:bs:dev": "nest start batch-server --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "PORT=9000 nest start --debug --watch",
     "start:prod": "node dist/apps/app-management/main",
     "start:bs:prod": "node dist/apps/batch-server/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
