Generate video with HTTP-Server instead of batch server.

--- a/app-management/tsconfig.json
+++ b/app-management/tsconfig.json
@@ -21,6 +21,9 @@
       "@apps/app-management/*": [
         "apps/app-management/src/*"
       ],
+      "@apps/batch-server/*": [
+        "apps/batch-server/src/*"
+      ],
       "@app/shared": [
         "libs/shared/src"
       ],
