calling TTS api from http-server.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -38,3 +38,7 @@ NODE_ENV='development'
 # Fonts file path for the video generation
 
 FONT_DIR=/Users/vinaymavi/github/deployment-helper/apis/app-management/fonts
+
+# TTS Server URL
+
+TTS_SERVER_URL='http://localhost:5000'
