--- a/app-management/package.json
+++ b/app-management/package.json
@@ -54,6 +54,7 @@
     "nest-cli": "^0.0.5",
     "openai": "^4.47.2",
     "pg": "^8.11.2",
+    "probe-image-size": "^7.2.3",
     "puppeteer": "^21.3.6",
     "puppeteer-screen-recorder": "^2.1.2",
     "reflect-metadata": "^0.1.13",
@@ -69,6 +70,7 @@
     "@types/fluent-ffmpeg": "^2.1.22",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/probe-image-size": "^7.2.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
