--- a/app-management/package.json
+++ b/app-management/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
     "build:bs": "nest build batch-server",
+    "build:img": "nest build image-generation",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "orm:migration:create": "npm run build && ts-node ./node_modules/typeorm/cli migration:create -o  ./migrations/migratoin",
     "orm:migration:generate": "npm run build && ts-node ./node_modules/typeorm/cli migration:generate -o ./migrations/migratoin -d data-source.ts",
@@ -19,6 +20,7 @@
     "start:debug": "PORT=9000 nest start --debug --watch",
     "start:prod": "node dist/apps/app-management/main",
     "start:bs:prod": "node dist/apps/batch-server/main",
+    "start:img:prod": "node dist/apps/image-generation/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
