--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -27,6 +27,8 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
+            console.log("Debug");
+            console.log(JSON.stringify(github));
             const inputs = github.context.payload.inputs;
             const { title, desc, thumbnail_url, video_url } = inputs;
             const issueTitle = `New Issue: ${title}`;
