dispatch Github CI workflow.

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -42,3 +42,6 @@ FONT_DIR=/Users/vinaymavi/github/deployment-helper/apis/app-management/fonts
 # TTS Server URL
 
 TTS_SERVER_URL='http://localhost:5000'
+
+#Github token
+GITHUB_TOKEN=''
