Impoved Youtube workflow handling
image service run locally

--- a/app-management/example.env
+++ b/app-management/example.env
@@ -45,3 +45,6 @@ TTS_SERVER_URL='http://localhost:5000'
 
 #Github token
 GITHUB_TOKEN=''
+
+#Image Service link running locally
+IMAGE_SERVICE=https://009c-2401-4900-883d-cab9-4889-83ef-c7cc-c5bc.ngrok-free.app
