feat: refactor Cloud Run deployment step to use google-github-actions for improved configuration and environment variable management

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,12 +90,38 @@ jobs:
         run: docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
       - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy ai-agent \
-          --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          --region ${{ env.REGION }} \
-          --platform managed \
-          --allow-unauthenticated \
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v2
+        with:
+          service: ${{ env.SERVICE_NAME }}
+          region: ${{ env.REGION }}
+          image: "${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
+          platform: managed
+          flags: "--allow-unauthenticated"
+          env_vars: |
+            AWS_COGNITO_POOL_URL=${{ secrets.AWS_COGNITO_POOL_URL }}
+            AWS_COGNITO_JWKS_URL=${{ secrets.AWS_COGNITO_JWKS_URL }}
+            GRANT_TYPE=${{ secrets.GRANT_TYPE }}
+            CLIENT_ID=${{ secrets.CLIENT_ID }}
+            REDIRECT_URI=${{ secrets.REDIRECT_URI }}
+            SERVICE_KEY=${{ secrets.SERVICE_KEY }}            
+            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}            
+            STORAGE_DIR=${{ secrets.STORAGE_DIR }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            NODE_ENV= 'production'
+            FONT_DIR=${{ secrets.FONT_DIR }}
+            TTS_SERVER_URL=${{ secrets.TTS_SERVER_URL }}
+          secrets: |
+            AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID:latest
+            AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY:latest
+            GCP_API_KEY=GCP_API_KEY:latest
+            OPENAI_API_KEY=LLM_API_KEY:latest
+            REDIS_HOST=REDIS_HOST:latest
+            REDIS_PASS=REDIS_PASS:latest
+            SERVER_API_KEY=SERVER_API_KEY:latest
+            VIDEO_API_BASE_URL=VIDEO_API_BASE_URL:latest
+            VIDEO_API_KEY=VIDEO_API_KEY:latest
+            GITHUB_TOKEN=GITHUB_TOKEN:latest
 
       - name: Show Deployed URL
         run: echo "Deployed to ${{ steps.deploy.outputs.url }}"
