--- a/app-management/package.json
+++ b/app-management/package.json
@@ -49,6 +49,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.9",
     "bull": "^4.11.3",
+    "class-validator": "^0.14.2",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.0.0",
     "googleapis": "^126.0.0",
