feat: update Cloud Run deployment flags to limit max instances

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,8 +96,7 @@ jobs:
           service: ${{ env.SERVICE_NAME }}
           region: ${{ env.REGION }}
           image: "${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
-          platform: managed
-          flags: "--allow-unauthenticated"
+          flags: "--allow-unauthenticated --max-instances=1"
           env_vars: |
             AWS_COGNITO_POOL_URL=${{ secrets.AWS_COGNITO_POOL_URL }}
             AWS_COGNITO_JWKS_URL=${{ secrets.AWS_COGNITO_JWKS_URL }}
